fixed vertical spacing for inline code

--- a/apps/frontend-tailwind/styles/globals.css
+++ b/apps/frontend-tailwind/styles/globals.css
@@ -20,7 +20,7 @@
 }
 @font-face {
   font-family: 'Stratos';
-  src: url('/fonts/Stratos/Stratos-RegularItalic.otf');
+  src: url('/fonts/Stratos/Stratos-Italic.otf');
   font-weight: 400;
   font-style: italic;
 }
@@ -70,7 +70,7 @@
 .prose {
   content: '';
   * {
-    @apply m-0 break-words text-zinc-700 dark:text-zinc-300;
+    @apply m-0 break-words text-zinc-700 dark:text-zinc-300 leading-[1.40rem];
     @apply first:mt-0;
   }
   > * {
@@ -88,17 +88,16 @@
     @apply p-0 dark:text-zinc-300;
   }
   h2 {
-    @apply leading-5 text-lg;
+    @apply text-lg;
   }
   hr {
   }
   p {
-    @apply leading-5;
   }
   img {
   }
   li {
-    @apply leading-5 mt-1;
+    @apply mt-1;
   }
   code {
     @apply font-mono;
@@ -108,7 +107,7 @@
     &:after {
       content: none;
     }
-    @apply bg-black bg-opacity-5 border-none font-medium text-sm rounded-md px-1 py-0.5;
+    @apply bg-black bg-opacity-5 border-none font-medium text-sm rounded-md px-1 py-[0.11rem];
     .dark & {
       @apply bg-white bg-opacity-10;
     }
@@ -120,7 +119,7 @@
     @apply px-4 py-3 m-0 rounded-lg my-4 overflow-x-auto font-medium leading-3;
     @apply bg-zinc-100 dark:bg-zinc-300 dark:bg-opacity-5;
     code {
-      @apply relative p-0 m-0 leading-5 text-current bg-transparent dark:bg-transparent rounded-none border-none inline-block min-w-full;
+      @apply relative p-0 m-0 text-current bg-transparent dark:bg-transparent rounded-none border-none inline-block min-w-full;
       font-size: 0.9rem;
       .line.highlighted {
         @apply before:block before:absolute before:h-5 before:bg-zinc-500 before:bg-opacity-10 before:-inset-x-4 before:pointer-events-none before:select-none;
